--- a/README
+++ b/README
@@ -3,4 +3,4 @@ Requerimentos:
 - Anaconda
 Comandos:
 - conda create -n smaquarium --python=3.7
-- conda install --yes --file requirgit ements.txt
+- conda install --yes --file requirements.txt
